# FlyingBirds

./: .gitignore  CMakeLists.txt  EmbedRegister.cmake  README.md  RpgGame.sln
Client/: CMakeLists.txt  Client.cpp  Client.h  EventBus.h  EventBus.ipp  Events.h  Game.h  GameManager.cpp  GameManager.h  GameWorld.cpp  GameWorld.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.ipp  main.cpp
Client/Components/: Animation.h  CMakeLists.txt  Health.h  Mass.h  Size.h  Sprite.h  Transform.h
Client/Entities/: CMakeLists.txt  Entity.h  EntityFactory.cpp  EntityFactory.h  Food.cpp  Food.h  Player.cpp  Player.h  Protection.cpp  Protection.h  SpeedBoost.cpp  SpeedBoost.h
Client/HUD/: CMakeLists.txt  GameEndHUD.cpp  GameEndHUD.h  HUDBase.h  HUDManager.cpp  HUDManager.h  InGameHUD.cpp  InGameHUD.h  MenuHUD.cpp  MenuHUD.h
Client/Systems/: CMakeLists.txt  ControlSystem.cpp  ControlSystem.h  ISystem.h  MovementSystem.cpp  MovementSystem.h  Systems.h  user_algo.lua
RpgGame/: CMakeLists.txt  RpgGame.cpp  RpgGame.h
RpgGame/Client/: CMakeLists.txt
RpgGame/Client/Game/: CMakeLists.txt  Game.cpp
RpgGame/Common/: CMakeLists.txt
RpgGame/Common/Components/: HealthComponent.h  SizeComponent.h  SpriteComponent.h  TransformComponent.h
RpgGame/Common/Entities/: CMakeLists.txt  Entity.h  Player.h
RpgGame/Common/Utils/: CMakeLists.txt  Logger.ipp
RpgGame/Resources/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h
RpgGame/Server/: CMakeLists.txt  ClientConnection.h  ConfigServer.h  GameManager.cpp  GameManager.h  GameWorld.h  Server.cpp  Server.h
RpgGame/Server/Components/: CMakeLists.txt  Position.h  Size.h
RpgGame/Server/Entities/: CMakeLists.txt  Player.cpp
RpgGame/Server/Systems/: FoodSystem.h  MovementSystem.h
Server/: CMakeLists.txt  ConfigServer.h  Events.h  GameManager.cpp  GameManager.h  GameWorld.cpp  GameWorld.h  ScoreboardManager.h  Server.cpp  Server.h  Server.ipp  main.cpp
Server/Components/: CMakeLists.txt  Health.h  Mass.h  Position.h  Size.h  Speed.h  Velocity.h
Server/Entities/: CMakeLists.txt  Entity.h  EntityType.h  Food.cpp  Food.h  Player.cpp  Player.h  Protection.h  SpeedBoost.h
Server/Systems/: CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  EntitySpawnSystem.cpp  EntitySpawnSystem.h  FoodSystem.h  MovementSystem.cpp  MovementSystem.h
Shared/: AngleUtils.h  CMakeLists.txt  EmbeddedAssetRegistry.h  EventBus.ipp  Logger.cpp  Logger.h  Logger.ipp  NetworkHandler.cpp  NetworkHandler.h  NetworkHandler.ipp
proto/: CMakeLists.txt  network.proto
